--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "coverage": "vitest run --coverage"
   },
   "dependencies": {
+    "firebase": "^9.17.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
