--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "match-sorter": "^6.3.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.8.0",
     "react-router-dom": "^6.8.1",
     "sort-by": "^0.0.2"
   },
