--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -10,7 +10,8 @@
                 "**/*.js?(x)"
             ],
             "rules": {
-                "react/react-in-jsx-scope": "off"
+                "react/react-in-jsx-scope": "off",
+                "react/prop-types": "off"
             }
         }
     ],
